# python-workout

./: .gitignore  README.md  Untitled.ipynb  output.csv
ch01-numbers/: 01_guessing_game.py  02_summing_numbers.py  03_run_timing.py  e01_guessing_game.py  e01b1_3_chances.py  e01b2_guess_base.py  e01b3_guess_word.py  e02_summing_numbers.py  e02b1_mysum_start.py  e02b2_mean.py  e02b3_word_summary.py  e02b4_sum_intable.py  e03_run_timing.py  e03b1_before_after.py  e03b2_decimal_add.py  e04_hex_output.py  e04b1_ord_chr.py  e04b2_name_triangle.py  test_01_guessing_game.py  test_e01_guessing_game.py  test_e02_summing_numbers.py  test_e03_run_timing.py  test_e04_hex_output.py
ch02-strings/: .gitignore  05_pig_latin.py  06_pig_latin_sentence.py  07_ubbi_dubbi.py  Chapter 2 — Strings.ipynb  e05_pig_latin.py  e05b1_capitalized.py  e05b2_punctuation.py  e05b3_different_vowels.py  e06_pig_latin_sentence.py  e06b1_word_per_line.py  e06b2_transpose_strings.py  e06b3_404_ips.py  e07_ubbi_dubbi.py  e07b1_capital.py  e07b2_remove_authors.py  e07b3_url_encode.py  e08_sort_string.py  e08b1_sort_words.py  e08b2_last_word_in_file.py  e08b3_longest_word_in_file.py  test_e05_pig_latin.py  test_e06_pig_latin_sentence.py  test_e07_ubbi_dubbi.py  test_e08_sort_string.py
ch03-lists-tuples/: 09_firstlast.py  10_sum_anything.py  11_alphabetize_names.py  13_tuple_records.py  Chatper 3 — Lists and tuples.ipynb  e09_firstlast.py  (+28 more)
ch08-modules/e37b2_menu/: pyproject.toml
ch08-modules/e37b2_menu/e37b2_menu/: __init__.py  e37b2_menu.py
ch08-modules/e37b2_menu/tests/: test_e37b2_menu.py
(+276 files in other folders)
